--- a/scss/buoy.scss
+++ b/scss/buoy.scss
@@ -62,6 +62,10 @@ body {
       flex-grow: 1;
     }
   }
+  &__section-title {
+    font-size: 1.5rem;
+    margin: 0;
+  }
   &__container {
     display: flex;
     flex-direction: column;
@@ -70,11 +74,25 @@ body {
       width: 50rem;
     }
   }
-  &__section-title {
-    font-size: 1.5rem;
-  }
   &__list {
-    margin: 0;
+    list-style-image: url(/images/bullet.svg);
+    margin: 0 0 0 2rem;
     padding: 0;
   }
+  &__list-item {
+    &::marker {
+      display: inline-block;
+      vertical-align: middle;
+    }
+  }
+}
+
+// Code
+code {
+  border-radius: 5px;
+  border: 1px solid #bcbec0;
+  background: #465351;
+  color: white;
+  padding: 1rem;
+  font: 0.8rem Monaco, Consolas, "Andale  Mono", "DejaVu Sans Mono", monospace;
 }
