--- a/public/css/buoy.css
+++ b/public/css/buoy.css
@@ -3,15 +3,21 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: helvetica, sans-serif;
+  line-height: 1.5em;
   margin: 0;
   width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
 }
 
 .buoy {
   align-items: center;
   display: flex;
   flex-direction: column;
+  font-size: 1.1rem;
   min-height: 100vh;
   min-width: 100vw;
 }
@@ -32,10 +38,11 @@ body {
 }
 .buoy__title {
   font-size: 5rem;
-  margin: 2rem 0 0 0;
+  margin: 2rem 0 3rem 0;
 }
 .buoy__subtitle {
-  font-size: 1.875rem;
+  font-size: 1.75rem;
+  font-weight: normal;
   margin: 1rem 0 3.5rem;
 }
 .buoy__subtitle span {
@@ -62,7 +69,7 @@ body {
   flex-grow: 1;
 }
 .buoy__section-title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin: 0;
 }
 .buoy__container {
@@ -76,22 +83,37 @@ body {
   }
 }
 .buoy__list {
-  list-style-image: url(/images/bullet.svg);
-  margin: 0 0 0 2rem;
+  list-style: none;
+  margin: 0;
   padding: 0;
+}
+.buoy__list-item-title {
+  font-size: 1.25rem;
+  margin-bottom: 0;
+}
+.buoy__list-item {
+  background-image: url(/images/wave-border.svg);
+  background-repeat: repeat-x;
+  margin-top: 3rem;
+  padding-top: 1.5rem;
 }
 .buoy__list-item::marker {
   display: inline-block;
   vertical-align: middle;
 }
+.buoy__list-item-description {
+  margin-top: 0.5rem;
+}
 
 code {
-  border-radius: 5px;
-  border: 1px solid #bcbec0;
-  background: #465351;
+  background: #1d1e22;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.5);
+  border-radius: 6px;
   color: white;
-  padding: 1rem;
+  display: inline-block;
   font: 0.8rem Monaco, Consolas, "Andale  Mono", "DejaVu Sans Mono", monospace;
+  margin: 0.25rem 0 1rem 0;
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=buoy.css.map */
