--- a/scss/buoy.scss
+++ b/scss/buoy.scss
@@ -4,9 +4,14 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: helvetica, sans-serif;
+  line-height: 1.5em;;
   margin: 0;
   width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
 }
 
 // Buoy
@@ -14,6 +19,7 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
+  font-size: 1.1rem;
   min-height: 100vh;
   min-width: 100vw;
   &__header {
@@ -33,10 +39,11 @@ body {
   }
   &__title {
     font-size: 5rem;
-    margin: 2rem 0 0 0;
+    margin: 2rem 0 3rem 0;
   }
   &__subtitle {
-    font-size: 1.875rem;
+    font-size: 1.75rem;
+    font-weight: normal;
     margin: 1rem 0 3.5rem;
     span {
       font-size: 0.6em;
@@ -63,7 +70,7 @@ body {
     }
   }
   &__section-title {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 0;
   }
   &__container {
@@ -75,24 +82,39 @@ body {
     }
   }
   &__list {
-    list-style-image: url(/images/bullet.svg);
-    margin: 0 0 0 2rem;
+    list-style: none;
+    margin: 0;
     padding: 0;
   }
+  &__list-item-title {
+    font-size: 1.25rem;
+    margin-bottom: 0;
+  }
   &__list-item {
+    background-image: url(/images/wave-border.svg);
+    background-repeat: repeat-x;
+    margin-top: 3rem;
+    padding-top: 1.5rem;
     &::marker {
       display: inline-block;
       vertical-align: middle;
     }
   }
+  &__list-item-description {
+    margin-top: .5rem;
+  }
 }
 
 // Code
 code {
-  border-radius: 5px;
-  border: 1px solid #bcbec0;
-  background: #465351;
+  background: #1d1e22;
+  box-shadow: 0 .25rem 1rem rgb(0 0 0 / 50%);
+  border-radius: 6px;
   color: white;
-  padding: 1rem;
+  display: inline-block;
   font: 0.8rem Monaco, Consolas, "Andale  Mono", "DejaVu Sans Mono", monospace;
+  margin: .25rem 0 1rem 0;
+  padding: 1rem; 
+
+
 }
