Update support notes

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,13 +6,12 @@ block content
     img.buoy__logo(src="/images/buoy.svg" alt="Simple tilted buoy illustration")
     div.buoy__intro
       h1.buoy__title Buoy
-      h2.buoy__subtitle A 
-        span (CSCI E31) 
-        | Digital Ocean help guide
+      h2.buoy__subtitle A Digital Ocean (DO) help guide
+        span  (CSCI E31) 
   main.buoy__main
     section.buoy__section
       div.buoy__container 
-        h3.buoy__section-title Accessing DO 
+        h3.buoy__section-title Accessing Digital Ocean
         ul.buoy__list
           li.buoy__list-item 
             h4.buoy__list-item-title Logging into DO via console
@@ -20,7 +19,7 @@ block content
             code ssh root@[insert ip-address]
     section.buoy__section
       div.buoy__container 
-        h3.buoy__section-title Troubleshooting DO
+        h3.buoy__section-title Troubleshooting Digital Ocean
         p App working locally, but not working on DO?  Have you:
         ul.buoy__list
           li.buoy__list-item 
@@ -30,12 +29,12 @@ block content
           li.buoy__list-item 
             h4.buoy__list-item-title Added environment variables?
             p.buoy__list-item-description If your application requires local environment variables not available within your repo, you may need to add environment variables on DO.
-            p.buoy__list-item-description Create a new env file (project root directory)
-            code touch local.env
-            p.buoy__list-item-description Edit the newly created .env file, adding required env variables (project root directory)
-            code vi local.env
+            p.buoy__list-item-description Create a new env file (project root directory):
+            code touch .env
+            p.buoy__list-item-description Edit the newly created .env file, adding required environment variables (in your project root directory):
+            code vi .env
           li.buoy__list-item 
-            h4.buoy__list-item-title Pulled the latest repo changesfrom Github?
+            h4.buoy__list-item-title Pulled the latest changes from your Github repo?
             p.buoy__list-item-description To pull your latest Github changes:
             code git pull origin [insert repo-name]
           li.buoy__list-item 
@@ -45,23 +44,28 @@ block content
             p.buoy__list-item-description Kill the node process you would like to stop, replacing [insert process-number] with the actual node process number:
             code kill [insert process-number]
           li.buoy__list-item 
-            h4.buoy__list-item-title Tried rerunning the process?
+            h4.buoy__list-item-title Tried re-running the process?
             p.buoy__list-item-description To try running the process indefinitally, run:
             code nohup node [insert process-name] &
             p.buoy__list-item-description To try running the process once, run:
             code node [insert process-name]
           li.buoy__list-item 
             h4.buoy__list-item-title Port number already in use error (Error: listen EADDRINUSE)? 
-            p.buoy__list-item-description You need a unique port number of each process. Either change the port number you are using, or stop an existing process on the port numnber:
-            code x         
+            p.buoy__list-item-description You need a unique port number for each process. You can either change the port number your app is using, or stop the existing process running on the current port number:
+            p.buoy__list-item-description Find out what processes are running on which ports: 
+            code lsof -P -i tcp:3000  
+            p.buoy__list-item-description List all the ports in use: 
+            code lsof -P -i tcp      
           li.buoy__list-item 
             h4.buoy__list-item-title Whitelisted your new port number? 
             p.buoy__list-item-description Replace [insert port number] with your port number (ex. 8080):
             code sudo ufw allow [insert port-number]
           li.buoy__list-item 
             h4.buoy__list-item-title Had an issue using port 3000?
-            p.buoy__list-item-description You must overwrite DO's default use of that port #:
-            code x
+            p.buoy__list-item-description You must overwrite 
+              a(href="https://www.digitalocean.com/community/questions/error-listen-eaddrinuse-address-already-in-use-3000") DO's default use of that port number
+              |  by running:
+            code sudo -u nodejs pm2 stop hello
           li.buoy__list-item 
             h4.buoy__list-item-title Restarted your application?
             p.buoy__list-item-description To reboot your droplet from the command line, run:
