--- a/public/css/buoy.css
+++ b/public/css/buoy.css
@@ -9,8 +9,20 @@ body {
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Montserrat", sans-serif;
+}
+
+a {
+  color: black;
+}
+a:visited {
+  color: black;
 }
 
 .buoy {
