--- a/scss/buoy.scss
+++ b/scss/buoy.scss
@@ -5,13 +5,25 @@
 
 body {
   font-family: helvetica, sans-serif;
-  line-height: 1.5em;;
+  line-height: 1.5em;
   margin: 0;
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Montserrat", sans-serif;
+}
+
+a {
+  color: black;
+  &:visited {
+    color: black;
+  }
 }
 
 // Buoy
@@ -38,8 +50,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
   }
   &__logo {
-    transition: transform .7s ease-in-out;
-    &:hover{
+    transition: transform 0.7s ease-in-out;
+    &:hover {
       transform: rotate(30deg);
     }
   }
@@ -81,8 +93,7 @@ h1, h2, h3, h4, h5, h6 {
       background-repeat: no-repeat;
       background-size: 11rem;
       padding-right: 7rem;
-      padding-top: 4rem; 
-
+      padding-top: 4rem;
     }
   }
   &__section-title {
@@ -120,20 +131,18 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
   &__list-item-description {
-    margin-top: .5rem;
+    margin-top: 0.5rem;
   }
 }
 
 // Code
 code {
   background: #1d1e22;
-  box-shadow: 0 .25rem 1rem rgb(0 0 0 / 50%);
+  box-shadow: 0 0.25rem 1rem rgb(0 0 0 / 50%);
   border-radius: 6px;
   color: white;
   display: inline-block;
   font: 0.8rem Monaco, Consolas, "Andale  Mono", "DejaVu Sans Mono", monospace;
-  margin: .25rem 0 1rem 0;
-  padding: 1rem; 
-
-
+  margin: 0.25rem 0 1rem 0;
+  padding: 1rem;
 }
