Add lang meta properties

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang='en')
   head
     title Buoy: A Digital Ocean Help Guide
     link(rel='stylesheet', href='css/buoy.css')
